@@ -100,3 +100,7 @@ kotlinter {
         "filename"
     )
 }
+
+tasks.test {
+    jvmArgs = listOf("--add-opens", "java.base/java.nio=ALL-UNNAMED")
+}
